<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hangman</string>
    <string name="hello_world">Hello world!</string>
    <string name="play">Play</string>
    <string name="action_settings">Settings</string>
    <string name="highscores">High scores</string>
    <string name="gallows">The Gallows</string>
	<string name="head">The Head</string>
	<string name="body">The Body</string>
	<string name="arm">An Arm</string>
	<string name="leg">A Leg</string>
	
	<string name="mode">Mode</string>
	<string name="evil">Evil</string>
	<string name="normal">Normal</string>
	<string name="guesses">Guesses</string>
	<string name="word_length">Word length</string>
	<string name="mistakes_left">Mistakes left: %1$s</string>
	
	<string name="four">4</string>
	<string name="six">6</string>
	<string name="eight">8</string>
	<string name="ten">10</string>
	
	<string name="cd_logo">Logo</string>

</resources>
